added basic crash logic

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <div id="game-box">
             <!-- here goes the game (box) -->
+            <div id="character"></div>
             <div class="walls">
                 <div id="gap">
                 </div>
@@ -38,26 +39,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/logic.js"></script>
-
-</html>
-
-<body>
-    <header>
-        <!-- here goes the header -->
-    </header>
-
-    <section>
-        <!-- here goes main content -->
-
-        <div class="game-box"></div> <!-- here goes the game (box) -->
-
-
-        </div>
-    </section>
-    <footer>
-        <!-- here goes the footer -->
-
-    </footer>
-</body>
+    <script type="text/javascript" src="assets/js/crash.js"></script>
 
 </html>
