--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         <div id="game-box">
             <!-- here goes the game (box) -->
             <div class="walls">
-                <div id="gap">
-                </div>
+                <div id="gap"></div>
+                <div id="sprite"><img src="assets/img/sprite1.png" alt="sprite start position"> </div>
             </div>
+           
+            
         </div>
-
 
     </section>
     <footer>
@@ -38,26 +39,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/logic.js"></script>
-
+    <script src="sprite.js"></script>
 </html>
-
-<body>
-    <header>
-        <!-- here goes the header -->
-    </header>
-
-    <section>
-        <!-- here goes main content -->
-
-        <div class="game-box"></div> <!-- here goes the game (box) -->
-
-
-        </div>
-    </section>
-    <footer>
-        <!-- here goes the footer -->
-
-    </footer>
-</body>
-
 </html>
