Add funcitons vary position of gap in game walls

--- a/index.html
+++ b/index.html
@@ -19,45 +19,20 @@
 
     <section>
         <!-- here goes main content -->
-
-        <div id="game-box">
-            <!-- here goes the game (box) -->
-            <div class="walls">
-                <div id="gap">
-                </div>
-            </div>
-        </div>
-
+        <div id="game-box"></div>
 
     </section>
     <footer>
-        <!-- here goes the footer -->
-
-    </body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/logic.js"></script>
-
-</html>
-
-<body>
-    <header>
-        <!-- here goes the header -->
-    </header>
-
-    <section>
-        <!-- here goes main content -->
-
-        <div class="game-box"></div> <!-- here goes the game (box) -->
-
-
-        </div>
-    </section>
-    <footer>
-        <!-- here goes the footer -->
-
     </footer>
+
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/js/script.js"></script>
+
+
+
+<script type="text/javascript" src="assets/js/game-map.js"></script>
 
 </html>
