--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Title</title>
 </head>
 
@@ -22,11 +23,13 @@
 
         <div id="game-box">
             <!-- here goes the game (box) -->
-            <div class="walls">
+            <div>
+                <div class="walls">
                 <div id="gap"></div>
-                <div id="sprite"><img src="assets/img/sprite1.png" alt="sprite start position"> </div>
             </div>
-           
+            <div id="sprite"><img src="assets/img/sprite1.png" alt="sprite start position">        
+            </div>
+        </div>
             
         </div>
 
@@ -39,6 +42,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/logic.js"></script>
-    <script src="sprite.js"></script>
+    <script src="assets/js/sprite.js"></script>
 </html>
 </html>
