movement fixed and scrolling bug removed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="game-box">
             <!-- here goes the game (box) -->
             <div>
-                <div class="walls">
+                <div class="walls"><!--<img src="assets/img/hedge.jpg" alt="">-->
                 <div id="gap"></div>
             </div>
             <div id="sprite"><img src="assets/img/sprite1.png" alt="sprite start position">        
