Fix wall gap inverval and sprite z-index

--- a/index.html
+++ b/index.html
@@ -19,29 +19,30 @@
     </header>
 
     <section>
-        <!-- here goes main content -->
-
-
         <div id="game-box">
             <!-- here goes the game (box) -->
-            <div id="sprite">
-              <img src="assets/img/sprite1.png" alt="sprite start position">        
-            </div>
+            <span id="sprite">
+                <img src="assets/img/sprite1.png" alt="sprite start position">
+            </span>
         </div>
-            
-        </div>
+
+
 
     </section>
+    <!-- here goes the footer -->
     <footer>
-        <!-- here goes the footer -->
+    </footer>
 
-    </body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/logic.js"></script>
-    <script type="text/javascript" src="assets/js/game-map.js"></script>
-    <script src="assets/js/sprite.js"></script>
-    <script type="text/javascript" src="assets/js/crash.js"></script>
+
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/js/logic.js"></script>
+<script type="text/javascript" src="assets/js/game-map.js"></script>
+<script src="assets/js/sprite.js"></script>
+<!-- <script type="text/javascript" src="assets/js/crash.js"></script> -->
+
 </html>
+
 </html>
