--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
     <section>
         <div id="game-box">
+            <div class="row" id="game-info">
+                <div class="col-4">Time: </div>
+                <div class="col-4">Score </div>
+                <div class="col-4">Lives:</div>
+            </div>
+
             <!-- here goes the game (box) -->
             <span id="sprite">
                 <img src="assets/img/sprite1.png" alt="sprite start position">
