added two new divs called character and character-right, to be used to animate landing page

--- a/landing.html
+++ b/landing.html
@@ -16,6 +16,8 @@
 </head>
 <body>
     <div class = "background">
+        <div id="character"></div>
+        <div id="character-right"></div>
         <div class="container">
             <h1 class="nes-text"></h1>
             <section>
