changed css path in landing.html

--- a/landing.html
+++ b/landing.html
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
 
     <!-- link stylesheet -->
-    <link rel="stylesheet" href="athieistyle.css">
+    <link rel="stylesheet" href="landing.css">
 </head>
 <body>
     <div class = "background">
@@ -70,7 +70,7 @@
         </section>
     </div>
 
-    <script src="index.js"></script>
+    <script src="landing.js"></script>
 
 </body>
 </html>
