--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <!-- here goes the game (box) -->
             <span id="sprite">
-                <img src="assets/img/sprite1.png" alt="sprite start position">
+                <img src="assets/img/make-you-a-retro-video-game-character.gif" alt="sprite start position">
             </span>
         </div>
 
