--- a/landing.html
+++ b/landing.html
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
 
     <!-- link stylesheet -->
-    <link rel="stylesheet" href="athieistyle.css">
+    <link rel="stylesheet" href="landing.css">
 </head>
 <body>
     <div class = "background">
@@ -35,8 +35,8 @@
                     </div>
                     
                     <div class="col-6" id="start-game">
-                       <button type="button" class="nes-btn is-primary btn-play" id="press-play">
-                            Play
+                       <button type="button"  class="nes-btn is-primary btn-play" id="press-play">
+                            <a src="game.html">Play</a> 
                         </button>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
         </section>
     </div>
 
-    <script src="index.js"></script>
+    <script src="landing.js"></script>
 
 </body>
 </html>
