--- a/landing.html
+++ b/landing.html
@@ -16,6 +16,10 @@
 </head>
 <body>
     <div class = "background">
+
+        <div id="character"></div>
+        <div id="character-right"></div>
+
         <div class="container">
             <h1 class="nes-text"></h1>
             <section>
@@ -35,8 +39,13 @@
                     </div>
                     
                     <div class="col-6" id="start-game">
+
+                       <button type="button" class="nes-btn is-primary btn-play" id="press-play">
+                            Play
+
                        <button type="button"  class="nes-btn is-primary btn-play" id="press-play">
                             <a src="game.html">Play</a> 
+
                         </button>
                     </div>
                 </div>
