added a wrapper for the characters to enter

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class = "background">
-        <div class="wrapper">
+        <div class="character-wrapper">
             <div id="character"></div>
             <div id="character-right"></div>
 
