changed modal section to div

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 
             </div>   
         </div>
-        <section id="modal">
+        <div id="modal">
             <div class="modal-inner">
                 <div class="modal-header">
                     <h2>Changes</h2>
@@ -69,7 +69,7 @@
                 </div>
               </div>
 
-        </section>
+            </div>
     </div>
 
     <script src="assets/js/landing.js"></script>
