--- a/game.html
+++ b/game.html
@@ -21,8 +21,8 @@
     <section>
         <div id="game-box">
             <div class="row" id="game-info">
-                <div class="col-4">Time: </div>
-                <div class="col-4">Score </div>
+                <div class="col-4">Time:</div>
+                <div class="col-4">Score: <span id="timer">0</span>  </div>
                 <div class="col-4">Lives:</div>
             </div>
 
