removed press  start id from play button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </div>
                         
                         <div class="col-6" id="start-game">
-                                <a href="game.html" class="nes-btn is-primary btn-play" id="press-play">
+                                <a href="game.html" class="nes-btn is-primary btn-play">
                                     Play
                                 </a> 
                         </div>
