--- a/game.html
+++ b/game.html
@@ -22,8 +22,8 @@
         <div id="game-box">
             <div class="row" id="game-info">
                 <div class="col-4">Time:</div>
-                <div class="col-4">Score: <span id="timer">0</span>  </div>
-                <div class="col-4">Lives:</div>
+                <div class="col-4">Score: <span id="timer">0</span> </div>
+                <div class="col-4"><button class="btn-success" id="start">Start </button></div>
             </div>
 
             <!-- here goes the game (box) -->
@@ -36,7 +36,7 @@
 
     </section>
     <footer>
-            <!-- here goes the footer -->
+        <!-- here goes the footer -->
 
     </footer>
 
