--- a/game.html
+++ b/game.html
@@ -32,9 +32,31 @@
             </span>
         </div>
 
-
+    
 
     </section>
+    <div id="modal2">
+        <div class="modal-inner">
+            <div class="modal-header">
+                <h2>Changes</h2>
+                <button type="button" class="nes-btn is-error" id="x-out">
+                    &times;
+                </button>
+
+            </div>
+
+            <div class="modal-body">
+
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="nes-btn is-success" id="close-btn">
+                    Close
+                </button>
+            </div>
+        </div>
+
+    </div>
     <footer>
         <!-- here goes the footer -->
 
