fix bug with walls

--- a/game.html
+++ b/game.html
@@ -21,9 +21,8 @@
     <section>
         <div id="game-box">
             <div class="row" id="game-info">
-                <div class="col-4">Time:</div>
-                <div class="col-4">Score: <span id="timer">0</span> </div>
-                <div class="col-4"><button class="btn-success" id="start">Start </button></div>
+                <div class="col-6 ">Score: <span id="timer">0</span> </div>
+                <div class="col-6 "><button class="btn-success " id="start">Start </button></div>
             </div>
 
             <!-- here goes the game (box) -->
@@ -32,7 +31,7 @@
             </span>
         </div>
 
-    
+
 
     </section>
 
@@ -42,7 +41,7 @@
 
     </footer>
 
-
+    <audio id="music" src="assets/sounds/game-music.wav" type="audio/wav" loop></audio>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
@@ -50,7 +49,7 @@
 <script type="text/javascript" src="assets/js/logic.js"></script>
 <script type="text/javascript" src="assets/js/game-map.js"></script>
 <script type="text/javascript" src="assets/js/sprite.js"></script>
-<script type="text/javascript" src="assets/js/crash.js"></script>
+<!-- <script type="text/javascript" src="assets/js/crash.js"></script> -->
 
 </html>
 
