--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <script src="assets/js/landing.js"></script>
     <script type="text/javascript" src="assets/js/game-map.js"></script>
-    <script src="assets/js/landing.js"></script>
+    <script type="text/javascript" src="assets/js/crash.js"></script>
 
 
 </body>
