added game over with reset function (#30)
Co-authored-by: Bradders81 <70446279+Bradders81@users.noreply.github.com>

--- a/game.html
+++ b/game.html
@@ -32,6 +32,19 @@
         </div>
 
 
+        <!-- Game over Modal -->
+        <div class="modal" id="game-over" data-backdrop="static" data-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header mx-auto">
+                        <h5 class="modal-title" id="staticBackdropLabel">Game Over!</h5>
+                    </div>
+                    <div class="modal-body">
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
 
