--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunger Dash</title>
+
+    <link rel="icon" href="assets/img/favicon.ico">
+    <title>DODGEM</title>
 
     <!-- linked nes.css and bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -16,7 +18,7 @@
 </head>
 
 <body>
-    <div class="background">
+    <div class = "background">
         <div class="character-wrapper">
             <div id="character"></div>
             <div id="character-right"></div>
@@ -26,6 +28,7 @@
                 <section>
                     <div class="row menu">
                         <div class="col-6 game-info">
+
                             <nav class="nes-text is-primary">
                                 <li>
                                     <button type="button" class="nes-btn btn-css open-modal">About</button>
@@ -48,6 +51,7 @@
                 </section>
 
             </div>
+
         </div>
         <div id="modal">
             <div class="modal-inner">
@@ -68,15 +72,18 @@
                         Close
                     </button>
                 </div>
-            </div>
-
+             </div>
         </div>
+    </div>
+
+            </div>
     </div>
     </div>
 
     <script src="assets/js/landing.js"></script>
     <script type="text/javascript" src="assets/js/game-map.js"></script>
-    <script src="assets/js/landing.js"></script>
+   
+
 
 
 </body>
