--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 
     <script src="assets/js/landing.js"></script>
     <script type="text/javascript" src="assets/js/game-map.js"></script>
+    <script type="text/javascript" src="assets/js/crash.js"></script>
+
    
 
 
