--- a/game.html
+++ b/game.html
@@ -30,9 +30,16 @@
                 <img src="assets/img/make-you-a-retro-video-game-character.gif" alt="sprite start position">
             </span>
         </div>
-
-
-
+        <div class="modal" id="game-over" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header mx-auto">
+                        <h5 class="modal-title" id="staticBackdropLabel">GAME OVER!</h5>
+                    </div>
+                    <div class="modal-body">
+                    </div>
+                </div>
+            </div>
     </section>
 
     </div>
@@ -41,7 +48,7 @@
 
     </footer>
 
-    <audio id="music" src="assets/sounds/game-music.wav" type="audio/wav" loop></audio>
+
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
