--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here" />
- 
+
     <!-- add icon and title name here -->
     <link rel="icon" href="assets/img/favicon.ico">
     <title>DODGEM</title>
@@ -35,22 +35,16 @@
                 <img src="assets/img/make-you-a-retro-video-game-character.gif" alt="sprite start position">
             </span>
         </div>
-
-
-        <!-- Game over Modal -->
-        <div class="modal" id="game-over" data-backdrop="static" data-keyboard="false" tabindex="-1"
-            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal" id="game-over" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header mx-auto">
-                        <h5 class="modal-title" id="staticBackdropLabel">Game Over!</h5>
+                        <h5 class="modal-title" id="staticBackdropLabel">GAME OVER!</h5>
                     </div>
                     <div class="modal-body">
                     </div>
                 </div>
             </div>
-        </div>
-
     </section>
 
     </div>
@@ -59,7 +53,7 @@
 
     </footer>
 
-    <audio id="music" src="assets/sounds/game-music.wav" type="audio/wav" loop></audio>
+
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
