--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="icon" href="assets/img/favicon.ico">
-    <title>DODGEM</title>
+    <title>Dodge'm</title>
 
     <!-- linked nes.css and bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -18,7 +16,7 @@
 </head>
 
 <body>
-    <div class = "background">
+    <div class="background">
         <div class="character-wrapper">
             <div id="character"></div>
             <div id="character-right"></div>
@@ -72,19 +70,16 @@
                         Close
                     </button>
                 </div>
-             </div>
+            </div>
         </div>
     </div>
 
-            </div>
+    </div>
     </div>
     </div>
 
     <script src="assets/js/landing.js"></script>
     <script type="text/javascript" src="assets/js/game-map.js"></script>
-    <script type="text/javascript" src="assets/js/crash.js"></script>
-
-   
 
 
 
